more work on modern site

--- a/index.html
+++ b/index.html
@@ -195,12 +195,9 @@
       </div>
 
       <div class="project-box">
-        <!-- <div class="project-images">
-          <img class="project-pic" src="./Assets/friends.png" alt="Screenshot of Scrappy Friends page." />
-          <img class="project-pic" src="./Assets/scrappypage.png" alt="Screenshot of gallery discovery page." />
-          <img class="project-pic" src="./Assets/scrappyprofile.png"
-            alt="Screenshot of a typical scrappy profile page." />
-        </div> -->
+        <div class="project-images">
+          <img class="project-pic" src="./Assets/modernsite.png" alt="Screenshot of my modern site." />
+        </div>
         <div class="project-info">
           <h2 class="project-title">Design Study : Modern Portfolio</h2>
           <hr class="project-hr">
@@ -209,8 +206,11 @@
             To show breadth, I made a replica of my portfolio site! Feel free to click the button
             to see the "modern" version of this site. (This one definitely fits my personal style more!)
           </p>
-          <button class="page-button" onclick="window.open('modern.html')">Modern
-            Site</button>
+          <div style="display: flex; justify-content: center;">
+            <button class="page-button" onclick="window.open('modern.html')">Modern
+              Site</button>
+          </div>
+
 
           <div class="skills">
             <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351);">Javascript</div>
