more work on modern

--- a/modern.html
+++ b/modern.html
@@ -20,8 +20,8 @@
         <script src="./particles/particles.js"></script>
 
         <div id="nav">
-            <button class="nav-button" onclick="window.open('index.html')">
-                << back to classic site </button>
+            <a href="index.html">
+                << back to classic site</a>
                     <div id="nav-buttons">
                         <button class="nav-button" id="about-anchor">About</button>
                         <button class="nav-button" id="project-anchor">Projects</button>
@@ -84,10 +84,54 @@
                         target="_blank">resume</a>.
                 </blockquote>
             </div>
-
         </div>
         <div id="project-section">
+            <div class="project">
+                <div>
+                    <h2>The Virtual Rosetta (Research)</h2>
+                    <div class="project-info">
+                        <p>
+                            The Virtual Rosetta was a project I worked on in the summer of 2022. It involved using
+                            scientific
+                            Python libraries to create visualization methods of a corpus of 4000
+                            woodblock prints from Vietnam. Read more about it here: <a
+                                href="https://drive.google.com/file/d/1LMgf56KCXGp90ApKy1m1LnQyOwqtleDC/view?usp=sharing">Research
+                                Poster</a>
+                        </p>
+                        <h3>Technical Details</h3>
+                        <ul>
+                            <li>Generated serialized matrices, minimum spanning trees, and force directed graphs using
+                                Python science
+                                libraries like SciPy,
+                                Sci-Kit Learn, and Pandas.</li>
+                            <li>Researched effective methods for dimensional reduction data visualization such as T-SNE.
+                            </li>
+                            <li>Programmed Python web scraping scripts with BeautifulSoup to convert the HTML corpus of
+                                data
+                                into PNG
+                                types and compile datasets.</li>
+                            <li>Visualized complex data in actionable graphs using PyPlot, revealing qualitative trends.
+                            </li>
+                        </ul>
+                        <div class="skills">
+                            <div class="tech-skill" style="background-color:  rgb(19, 102, 154);">Python</div>
+                            <div class="tech-skill" style="background-color: rgb(154, 192, 146);">HTML</div>
+                            <div class="tech-skill" style="background-color: rgb(249, 165, 135);">Excel</div>
+                        </div>
+                    </div>
 
+                </div>
+                <div class="project-image">
+
+                </div>
+
+            </div>
+            <div class="project">
+
+            </div>
+            <div class="project">
+
+            </div>
         </div>
         <div id="experience-section">
 
