finished projects section

--- a/modern.html
+++ b/modern.html
@@ -54,6 +54,8 @@
                 <p>
                     20 yrs old, he/him.
                 </p>
+                <br />
+                <br />
                 <div id="socials">
                     <a class="social-link" target="_blank"
                         href="https://www.linkedin.com/in/tyler-gurth-87249b225/"><img class="social-photo"
@@ -79,16 +81,26 @@
                     always up to connect! <a href="mailto:tgurth21@gmail.com">Or, email me!</a>
                 </blockquote>
                 <br />
-                <blockquote>
-                    Want more info? Check out my <a href="https://tylergurth.com/TylerGurthResume.pdf"
-                        target="_blank">resume</a>.
-                </blockquote>
+                <div id="resume-and-drawing">
+                    <blockquote>
+                        Want more info? Check out my <a href="https://tylergurth.com/TylerGurthResume.pdf"
+                            target="_blank">resume</a>.
+                    </blockquote>
+                    <img id="drawing" src="Assets/tyson_nazare_glassless.png">
+                </div>
+
             </div>
         </div>
         <div id="project-section">
+            <h2 class="section-title">Projects</h2>
+
             <div class="project">
+                <div class="project-bar">
+                    <div></div>
+                    <div class="opacity-bar"></div>
+                </div>
                 <div>
-                    <h2>The Virtual Rosetta (Research)</h2>
+                    <h2 class="project-title">The Virtual Rosetta (Research)</h2>
                     <div class="project-info">
                         <p>
                             The Virtual Rosetta was a project I worked on in the summer of 2022. It involved using
@@ -114,22 +126,98 @@
                             </li>
                         </ul>
                         <div class="skills">
-                            <div class="tech-skill" style="background-color:  rgb(19, 102, 154);">Python</div>
-                            <div class="tech-skill" style="background-color: rgb(154, 192, 146);">HTML</div>
-                            <div class="tech-skill" style="background-color: rgb(249, 165, 135);">Excel</div>
+                            Excel - HTML - Python
                         </div>
                     </div>
 
                 </div>
-                <div class="project-image">
-
+                <div class="image-container">
+                    <img class="project-image" src="Assets/tree.png">
                 </div>
 
             </div>
             <div class="project">
+                <div class="project-bar">
+                    <div></div>
+                    <div class="opacity-bar" style="background-color: rgba(210, 255, 47, 0.536);"></div>
+                </div>
+                <div>
+                    <h2 class="project-title" style="color: rgba(210, 255, 47);">Escape Garden State Web Panel</h2>
+                    <div class="project-info">
+                        <p>
+                            The Escape Garden State Web Panel was a project I made for my previous employer, an escape
+                            room company in New Jersey. The site replaced an old, out-dated subscription site with a
+                            customized
+                            web app that fit the needs of the company.
+                        </p>
+                        <h3>Technical Details</h3>
+                        <ul>
+                            <li>Utilized Google Firebase as storage, authentication, and database for the project.</li>
+                            <li>Programmed custom tools for the app, including scripting time functions and game
+                                features
+                                with
+                                Javascript.</li>
+                            <li>Developed utils for statistic tracking, to be used for further adveritsiing and data
+                                analysis.</li>
+                            <li>Designed, and created with original CSS, a GUI for employees to run the escape rooms.
+                            </li>
+                        </ul>
+                        <div class="skills">
+                            Javascript - HTML - CSS
+                        </div>
+                    </div>
+
+                </div>
+                <div class="image-container">
+                    <img class="project-image" style="background: linear-gradient(45deg, white, rgba(210, 255, 47));
+                    " src="Assets/lock.png">
+                </div>
+
 
             </div>
             <div class="project">
+                <div class="project-bar">
+                    <div></div>
+                    <div class="opacity-bar" style="background-color: rgba(101, 92, 208, 0.536);"></div>
+                </div>
+                <div>
+                    <h2 class="project-title" style="color: rgba(101, 92, 208)">Scrappy Social Media Web App</h2>
+                    <div class="project-info">
+                        <p>
+                            Scrappy is a React social media web app I made with a team in my software engineering class
+                            at
+                            Brown. It
+                            combines
+                            the best aspects of photo sharing apps with social media, forming a sentimental and
+                            reflective
+                            view into a
+                            user's life.
+                        </p>
+                        <h3>Technical Details</h3>
+                        <ul>
+                            <li>Used React TypeScript Framework to build out the components of the site, coupled with
+                                React
+                                Router to
+                                create a navigable state system.</li>
+                            <li>Connected with Google Authentication API to compose a login service and security.</li>
+                            <li>Developed a MongoDB Java database, and uploaded photos to AWS as storage.</li>
+                            <li>Personally programmed an NLP sorting algorithm using English feature vectors to sort
+                                posts
+                                based on
+                                Hashtags.</li>
+                        </ul>
+
+                        <div class="skills">
+                            Java - HTML - Javascript - Typescript - CSS
+                        </div>
+                    </div>
+
+                </div>
+                <div class="image-container">
+                    <img class="project-image" style="background: linear-gradient(45deg, white, rgba(101, 92, 208));
+                    " src="Assets/ScrappyLogo.svg">
+                </div>
+
 
             </div>
         </div>
