--- a/modern.html
+++ b/modern.html
@@ -222,6 +222,55 @@
             </div>
         </div>
         <div id="experience-section">
+            <h2 class="section-title">Experience</h2>
+            <div id="jobs">
+                <div class="job">
+                    <h2 class="job-title">Head Teaching Assistant, Brown CS</h2>
+                    <hr style="    background: linear-gradient(45deg, rgb(249, 165, 135), rgb(249, 226, 135));" />
+
+                    <p>I serve as a Head Teaching Assistant for Brown Computer Science's class on Discrete Structures
+                        and
+                        Probability, as well as the department's class "The Digital World", an introduction to
+                        programming and
+                        computer history.
+                        Within the proof based class, I work on grading, communicating with students, and managing a
+                        staff of 35
+                        TAs.
+                        In the introductory programming class, I develop new assignments, hold office hours, and manage
+                        a staff of
+                        15
+                        TAs. In both classes, I focus on course logistics, serving over 330 students (Discrete
+                        Structures) and 220
+                        (The
+                        Digital World) students.</p>
+                    <div class="skills">
+                        Management - Course Development - Scheduling
+                    </div>
+                </div>
+                <div class="job">
+                    <h2 class="job-title">Technical Director, Escape Garden State</h2>
+                    <hr style="    background: linear-gradient(45deg, rgb(95, 184, 66), rgb(135, 180, 249));" />
+                    <p>
+                        I developed and designed a new escape room web app with Vite.js and Google Firebase database. I
+                        also
+                        acted as a tech consultant for the staff, and made helpful util systems, like a javascript
+                        Discord
+                        bot, and
+                        math utils for calculating scores and times.
+                        Within my role as a game master, I led clients through rooms, took care of transactions, and
+                        helped create bookings. I also trained 5+ employees on how to run the rooms, and open/close the
+                        facility.
+                    </p>
+                    <br />
+                    <br />
+
+                    <div class="skills">
+                        Web Development - Customer Service - Training
+                    </div>
+                </div>
+
+            </div>
+
 
         </div>
         <div id="gallery-section">
