--- a/modern.html
+++ b/modern.html
@@ -26,6 +26,7 @@
                         <button class="nav-button" id="about-anchor">About</button>
                         <button class="nav-button" id="project-anchor">Projects</button>
                         <button class="nav-button" id="experience-anchor">Experience</button>
+                        <button class="nav-button" id="skill-anchor">Skills</button>
                         <button class="nav-button" id="gallery-anchor">Gallery</button>
                     </div>
         </div>
@@ -271,6 +272,20 @@
 
             </div>
 
+
+        </div>
+        <div id="skill-section">
+            <h2 class="section-title">Programming Skills</h2>
+            <div id="programming-skills">
+                <div class="skill-bubble">CSS</div>
+                <div class="skill-bubble">HTML</div>
+                <div class="skill-bubble">Python</div>
+                <div class="skill-bubble">Java</div>
+                <div class="skill-bubble">Javascript</div>
+                <div class="skill-bubble">TypeScript</div>
+                <div class="skill-bubble">C</div>
+                <div class="skill-bubble">C++</div>
+            </div>
 
         </div>
         <div id="gallery-section">
