redesigned into more of a gallery

--- a/index.html
+++ b/index.html
@@ -92,11 +92,6 @@
     <div id="project-section">
       <h2 class="section-title">Projects</h2>
       <div class="project-box">
-        <div class="project-images">
-          <img class="project-pic" src="./Assets/MST.png" alt="Picture of Minimum Spanning Tree of images." />
-          <img class="project-pic" src="./Assets/SortedMatrix.png"
-            alt="Picture of a sorted matrix graph with trend line." />
-        </div>
         <div class="project-info">
           <h2 class="project-title">The Virtual Rosetta (Research)</h2>
           <hr class="project-hr">
@@ -152,19 +147,11 @@
             <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351);">CSS</div>
           </div>
         </div>
-        <div class="project-images">
-          <img class="project-pic" src="./Assets/GameRoom.png" alt="Screenshot of the game room panel." />
-          <img class="project-pic" src="./Assets/leaderboard.png" alt="Screenshot of the leaderboard." />
-        </div>
+
       </div>
 
       <div class="project-box">
-        <div class="project-images">
-          <img class="project-pic" src="./Assets/friends.png" alt="Screenshot of Scrappy Friends page." />
-          <img class="project-pic" src="./Assets/scrappypage.png" alt="Screenshot of gallery discovery page." />
-          <img class="project-pic" src="./Assets/scrappyprofile.png"
-            alt="Screenshot of a typical scrappy profile page." />
-        </div>
+
         <div class="project-info">
           <h2 class="project-title">Scrappy</h2>
           <hr class="project-hr">
@@ -209,46 +196,62 @@
   <div class="page-section">
     <div id="experience-section">
       <h2 class="section-title">Experience</h2>
-      <div class="experience-box">
-        <h3>Head Teaching Assistant, Brown University Computer Science</h3>
-        <blockquote>
-          I serve as a Head Teaching Assistant for Brown Computer Science's class on Discrete Structures and
-          Probability, as well as the department's class "The Digital World", an introduction to programming and
-          computer history.
-          Within the proof based class, I work on grading, communicating with students, and managing a staff of 35
-          TAs.
-          In the introductory programming class, I develop new assignments, hold office hours, and manage a staff of
-          15
-          TAs. In both classes, I focus on course logistics, serving over 330 students (Discrete Structures) and 220
-          (The
-          Digital World) students.
-        </blockquote>
-      </div>
-      <div class="experience-box">
-        <h3>Technical Director, Escape Garden State NJ</h3>
-        <blockquote>
-          I developed and designed a new escape room web app with Vite.js and Google Firebase database. I also
-          acted as a tech consultant for the staff, and made helpful util systems, like a javascript Discord bot, and
-          math utils for calculating scores and times.
-        </blockquote>
-      </div>
-      <div class="experience-box">
-        <h3>Technical Skills</h3>
-        <div id="experience-skills">
-          <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351); width: 80%;">Javascript</div>
-          <div class="tech-skill" style="background-color: rgba(195, 251, 255, 0.351); width: 70%;">Typescript</div>
-          <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351); width: 95%;">HTML</div>
-          <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351); width: 92%;">CSS</div>
-          <div class="tech-skill" style="background-color: rgba(220, 139, 255, 0.351); width: 95%;">Java</div>
-          <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351); width: 65%;">Excel</div>
-          <div class="tech-skill" style="background-color: rgba(255, 186, 129, 0.351); width: 55%;">C / C++</div>
+
+      <div id="experience-boxes">
+
+        <div class="experience-box">
+
+          <div class="experience-info">
+            <h3>Head Teaching Assistant, Brown University Computer Science</h3>
+            <blockquote>
+              I serve as a Head Teaching Assistant for Brown Computer Science's class on Discrete Structures and
+              Probability, as well as the department's class "The Digital World", an introduction to programming and
+              computer history.
+              Within the proof based class, I work on grading, communicating with students, and managing a staff of 35
+              TAs.
+              In the introductory programming class, I develop new assignments, hold office hours, and manage a staff of
+              15
+              TAs. In both classes, I focus on course logistics, serving over 330 students (Discrete Structures) and 220
+              (The
+              Digital World) students.
+            </blockquote>
+          </div>
+        </div>
+        <div class="experience-box">
+          <div class="experience-info">
+
+            <h3>Technical Director, Escape Garden State NJ</h3>
+            <blockquote>
+              I developed and designed a new escape room web app with Vite.js and Google Firebase database. I also
+              acted as a tech consultant for the staff, and made helpful util systems, like a javascript Discord bot,
+              and
+              math utils for calculating scores and times.
+            </blockquote>
+          </div>
         </div>
 
-        <blockquote>
-          React, MongoDB, AWS, Node, GitHub, Git, Firebase, Jest, Figma, Blender, Photoshop, and Microsoft Office
-          Suite
-        </blockquote>
+        <div class="experience-box">
+          <div class="experience-info">
+            <h3>Technical Skills</h3>
+            <div id="experience-skills">
+              <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351); width: 80%;">Javascript</div>
+              <div class="tech-skill" style="background-color: rgba(195, 251, 255, 0.351); width: 70%;">Typescript</div>
+              <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351); width: 95%;">HTML</div>
+              <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351); width: 92%;">CSS</div>
+              <div class="tech-skill" style="background-color: rgba(220, 139, 255, 0.351); width: 95%;">Java</div>
+              <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351); width: 65%;">Excel</div>
+              <div class="tech-skill" style="background-color: rgba(255, 186, 129, 0.351); width: 55%;">C / C++</div>
+            </div>
+
+
+            <blockquote>
+              React, MongoDB, AWS, Node, GitHub, Git, Firebase, Jest, Figma, Blender, Photoshop, and Microsoft Office
+              Suite
+            </blockquote>
+          </div>
+        </div>
       </div>
+
     </div>
     <div class="caption">
       <p>Flowers on a Window Ledge, c. 1861. John La Farge.</p>
