added photography website

--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
       </div>
     </div>
   </div>
+  <p style="text-align: center; color: black;">Looking for my photography? Check out my <a
+      href="photography.html">Photography
+      Website</a></p>
+
 
 
   <footer>
