added python to skills

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
               <div class="tech-skill" style="background-color: rgba(220, 139, 255, 0.351); width: 95%;">Java</div>
               <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351); width: 65%;">Excel</div>
               <div class="tech-skill" style="background-color: rgba(255, 186, 129, 0.351); width: 55%;">C / C++</div>
+              <div class="tech-skill" style="background-color: rgba(173, 129, 255, 0.351); width: 100%;">Python</div>
             </div>
 
 
