--- a/photography.html
+++ b/photography.html
@@ -47,6 +47,10 @@
             <img class="portfolio-photo" src="Assets/Photos/VictoriaAtlas.JPG">
             <img class="portfolio-photo" src="Assets/Photos/LibraryDark copy.png">
 
+            <img class="portfolio-photo" src="Assets/Photos/AlpacaEating.JPG">
+            <img class="portfolio-photo" src="Assets/Photos/BabyAlpaca.JPG">
+            <img class="portfolio-photo" src="Assets/Photos/BrownAlpaca.JPG">
+
             <img class="portfolio-photo" src="Assets/Photos/AlanaHeadshot.JPG">
             <img class="portfolio-photo" src="Assets/Photos/Atlas.png">
             <img class="portfolio-photo" src="Assets/Photos/BeatriceGrad.JPG">
