added architectural plans

--- a/cards.html
+++ b/cards.html
@@ -18,6 +18,7 @@
         <div id="cards-title">
             <h2>HIAA0063 Midterm Exam Review</h2>
         </div>
+        <h2>Definitions</h2>
         <div class="card">
             <div class="card-header">
                 <h3>The Logic of Objects</h3>
@@ -150,6 +151,101 @@
                 </div>
             </div>
         </div>
+        <h2>Architectural Plans</h2>
+
+        <div class="card">
+            <div class="card-header">
+                <h3>Charbagh</h3>
+            </div>
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <img class="card-image" src="CardAssets/charbagh.png" />
+                </div>
+                <div class="card-separator"></div>
+                <div class="card-info">
+                    <ul>
+                        <li>
+                            Literally translates to "four garden". Divided by two intersecting channels of water to
+                            create quadrants of cultivation.
+                        </li>
+                        <li>
+                            Fountain in the middle. Lined by walls, arcades, and usually a pavilion across the lines on
+                            the sides.
+                        </li>
+                        <li>
+                            Small lots of plants arranged geometrically, big focus on mosaic, tile. Mix of trees and
+                            plants.
+                        </li>
+                        <li>
+                            Serence oaises in the middle of barren regions, to be walked through peacefully or be a
+                            scenic place.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h3>Wabi Tea</h3>
+            </div>
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <img class="card-image" src="CardAssets/wabi_plan.png" />
+                </div>
+                <div class="card-separator"></div>
+                <div class="card-info">
+                    <ul>
+                        <li>
+                            Rustic and simple places, full of ritual and cultural heritage. Founded on the Wabi styles
+                            by Rikyu.
+                        </li>
+                        <li>
+                            Measured by number of mats in the house, usually relatively small. Had to crawl to enter
+                            under small door.
+                            Different entrances for guests and host. Choreographed ceremony from start to end.
+                        </li>
+                        <li>
+                            Mizuya was water preparation room.
+                        </li>
+                        <li>
+                            Tokonoma was raised alcove with hanging scroll and flower arrangement (ancestral area).
+                            Central hearth to brew the tea.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h3>Ottoman Coffeehouse</h3>
+            </div>
+            <div class="card-content">
+                <div class="card-image-caption">
+                    <img class="card-image" src="CardAssets/ottoman_house.png" />
+                </div>
+                <div class="card-separator"></div>
+                <div class="card-info">
+                    <ul>
+                        <li>
+                            New social houses, for people to go gather and escape the home. Stimulated by coffee.
+                        </li>
+                        <li>
+                            Courtyard structure, fountain in the middle with raised platform (Divan) around it.
+                        </li>
+                        <li>
+                            Separate sitting areas that overlook the main room for intimate gatherings (the top Divan).
+                        </li>
+                        <li>
+                            Very much a social center. A lot of seating room around, often with an open fireplace (the
+                            semi circle).
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer>
